Local dev ser4ver, also added some text to the page and report the time of metric collection.

--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing TTVC</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Testing TTVC metric</h1>
     <p>
-        <img src="https://placekitten.com/300/300" width="300" height="300" onload="performance.mark('image-onload-0');" />
-        <script>performance.mark('image-inline-0');</script>
+      <img
+        src="https://placekitten.com/300/300"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-0');"
+      />
+      <script>
+        performance.mark("image-inline-0");
+      </script>
     </p>
     <p>
-        <img src="https://placekitten.com/301/301" width="300" height="300" onload="performance.mark('image-onload-1');" />
-        <script>performance.mark('image-inline-1');</script>
+      Go into a room to decide you didn't want to be in there anyway cat fur is
+      the new black for spread kitty litter all over house why dog in house? i'm
+      the sole ruler of this home and its inhabitants smelly, stupid dogs,
+      inferior furballs time for night-hunt, human freakout meow meow we are 3
+      small kittens sleeping most of our time, we are around 15 weeks old i
+      think, i donâ€™t know i canâ€™t count. Thug cat cough furball into food
+      bowl then scratch owner for a new one. Haha you hold me hooman i scratch
+      kitty run to human with blood on mouth from frenzied attack on poor
+      innocent mouse, don't i look cute? or really likes hummus. Eat and than
+      sleep on your face. I rule on my back you rub my tummy i bite you hard.
+      Avoid the new toy and just play with the box it came in cat not kitten
+      around . What a cat-ass-trophy! lick the plastic bag, eats owners hair
+      then claws head cats go for world domination scratch me there, elevator
+      butt yet i show my fluffy belly but it's a trap! if you pet it i will tear
+      up your hand so all of a sudden cat goes crazy.
+    </p>
+    <script>
+      performance.mark("text-0");
+    </script>
+    <p>
+      <img
+        src="https://placekitten.com/301/301"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-1');"
+      />
+      <script>
+        performance.mark("image-inline-1");
+      </script>
     </p>
     <p>
-        <img src="https://placekitten.com/2002/2002" width="300" height="300"
-            onload="performance.mark('image-onload-2');" />
-        <script>performance.mark('image-inline-2');</script>
+      Jump on counter removed by human jump on counter again removed by human
+      meow before jumping on counter this time to let the human know am coming
+      back slap owner's face at 5am until human fills food dish i am the best so
+      human is in bath tub, emergency! drowning! meooowww!. Lick yarn hanging
+      out of own butt give me attention or face the wrath of my claws put toy
+      mouse in food bowl run out of litter box at full speed so making sure that
+      fluff gets into the owner's eyes eat all the power cords. Make muffins
+      chew foot terrorize the hundred-and-twenty-pound rottweiler and steal his
+      bed, not sorry but flex claws on the human's belly and purr like a
+      lawnmower and push your water glass on the floor munch on tasty moths yet
+      cough hairball on conveniently placed pants. Meow meow we are 3 small
+      kittens sleeping most of our time, we are around 15 weeks old i think, i
+      donâ€™t know i canâ€™t count shake treat bag lick human with sandpaper
+      tongue paw at beetle and eat it before it gets away, cough hairball, eat
+      toilet paper so need to check on human, have not seen in an hour might be
+      dead oh look, human is alive, hiss at human, feed me. Chew foot take a big
+      fluffing crap ðŸ’© but kitty run to human with blood on mouth from
+      frenzied attack on poor innocent mouse, don't i look cute? curl into a
+      furry donut so poop on the floor, break a planter, sprint, eat own hair,
+      vomit hair, hiss, chirp at birds, eat a squirrel, hide from fireworks,
+      lick toe beans, attack christmas tree and thug cat tickle my belly at your
+      own peril i will pester for food when you're in the kitchen even if it's
+      salad . Milk the cow always hungry so i is playing on your console hooman
+      but then cats take over the world yet car rides are evil so go crazy with
+      excitement when plates are clanked together signalling the arrival of cat
+      food for poop in litter box, scratch the walls. Sitting in a box tuxedo
+      cats always looking dapper ignore the squirrels, you'll never catch them
+      anyway kitty kitty pussy cat doll rub against owner because nose is wet.
+      Cuddle no cuddle cuddle love scratch scratch leave hair everywhere, but
+      eat owner's food fall over dead (not really but gets sypathy) shake treat
+      bag. Claws in the eye of the beholder under the bed groom forever, stretch
+      tongue and leave it slightly out, blep it's 3am, time to create some chaos
+      and fight an alligator and win. Rub my belly hiss meow meow you are my
+      owner so here is a dead rat, present belly, scratch hand when stroked so
+      when in doubt, wash headbutt owner's knee. It's 3am, time to create some
+      chaos eat and than sleep on your face. Stretch lick human with sandpaper
+      tongue or see owner, run in terror so touch water with paw then recoil in
+      horror eat too much then proceed to regurgitate all over living room
+      carpet while humans eat dinner please let me outside pouty face yay! wait,
+      it's cold out please let me inside pouty face oh, thank you rub against
+      mommy's leg oh it looks so nice out, please let me outside again the
+      neighbor cat was mean to me please let me back inside. Lie on your belly
+      and purr when you are asleep chase little red dot someday it will be mine!
+      mew for sit in a box for hours. Inspect anything brought into the house if
+      it smells like fish eat as much as you wish. Stare at owner accusingly
+      then wink. Destroy couch be superior or yowling nonstop the whole night.
+      Kitten is playing with dead mouse slap kitten brother with paw dismember a
+      mouse and then regurgitate parts of it on the family room floor so pet my
+      belly, you know you want to; seize the hand and shred it! for when in
+      doubt, wash. Lick the plastic bag all of a sudden cat goes crazy, but in
+      the middle of the night i crawl onto your chest and purr gently to help
+      you sleep and bawl under human beds. If it fits, i sits chirp at birds so
+      i is not fat, i is fluffy i could pee on this if i had the energy. Do
+      doodoo in the litter-box, clickityclack on the piano, be frumpygrumpy
+      really likes hummus. Kitty poochy. Sit in window and stare oooh, a bird,
+      yum all of a sudden cat goes crazy chew foot love you, then bite you.
+      Cough whatever. Ooh, are those your $250 dollar sandals? lemme use that as
+      my litter box attempt to leap between furniture but woefully miscalibrate
+      and bellyflop onto the floor; what's your problem? i meant to do that now
+      i shall wash myself intently or i see a bird i stare at it i meow at it i
+      do a wiggle come here birdy or x and chase dog then run away have my
+      breakfast spaghetti yarn small kitty warm kitty little balls of fur.
     </p>
-    <p>
-        <img src="https://placekitten.com/2003/2003" width="300" height="300"
-            onload="performance.mark('image-onload-3');" />
-        <script>performance.mark('image-inline-3');</script>
-    </p>
-    <p>
-        <img src="https://placekitten.com/2004/2004" width="300" height="300"
-            onload="performance.mark('image-onload-4');" />
-        <script>performance.mark('image-inline-4');</script>
-    </p>
-    <p>
-        <img src="https://placekitten.com/2005/2005" width="300" height="300"
-            onload="performance.mark('image-onload-5');" />
-        <script>performance.mark('image-inline-5');</script>
-    </p>
-    <p>
-        <img src="https://placekitten.com/2006/2006" width="300" height="300"
-            onload="performance.mark('image-onload-6');" />
-        <script>performance.mark('image-inline-6');</script>
-    </p>
-</body>
+    <script>
+      performance.mark("text-1");
+    </script>
 
+    <p>
+      <img
+        src="https://placekitten.com/2002/2002"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-2');"
+      />
+      <script>
+        performance.mark("image-inline-2");
+      </script>
+    </p>
+    <p>
+      <img
+        src="https://placekitten.com/2003/2003"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-3');"
+      />
+      <script>
+        performance.mark("image-inline-3");
+      </script>
+    </p>
+    <p>
+      <img
+        src="https://placekitten.com/2004/2004"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-4');"
+      />
+      <script>
+        performance.mark("image-inline-4");
+      </script>
+    </p>
+    <p>
+      <img
+        src="https://placekitten.com/2005/2005"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-5');"
+      />
+      <script>
+        performance.mark("image-inline-5");
+      </script>
+    </p>
+    <p>
+      <img
+        src="https://placekitten.com/2006/2006"
+        width="300"
+        height="300"
+        onload="performance.mark('image-onload-6');"
+      />
+      <script>
+        performance.mark("image-inline-6");
+      </script>
+    </p>
+  </body>
 </html>
